// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> renders correctly should render <Button/> with custom params 1`] = `
<button
  className="css-16327h2"
  onClick={[MockFunction]}
>
  my button
</button>
`;

exports[`<Button/> renders correctly should render <Button/> with default params 1`] = `
<button
  className="css-fx8zlh"
  onClick={[MockFunction]}
>
  button
</button>
`;
